--- a/styles/index.css
+++ b/styles/index.css
@@ -7,15 +7,33 @@
     text-align: center;
 }
 
-.main {
+#temp-container,
+#landscape-container {
 
     max-width: 900px;
-    margin: auto;
+    margin: 20px;
     display: grid;
     grid-template-columns: 1fr;
     grid-auto-rows: minmax(100px, auto);
     border: 2px solid black;
     text-align: center;
+
+}
+
+#city-container {
+    max-width: 900px;
+    margin: 20px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    border: 2px solid black;
+    text-align: center;
+}
+
+#city-title,
+#city-input {
+
+    grid-row-start: 2;
 
 }
 
